Whitespace fix

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,199 +1,198 @@
+body {
+  margin: 0;
+  padding: 0;
+  overflow: hidden;
+  height: 100%;
+  max-height: 100%;
+  font-family: sans-serif;
+  line-height: 1.5em;
+  overflow: auto;
+}
 
-		body {
-			margin: 0;
-			padding: 0;
-			overflow: hidden;
-			height: 100%; 
-			max-height: 100%;
-			font-family: sans-serif;
-			line-height: 1.5em;
-			overflow: auto;
-		}
+main {
+  position: center;
+  top: 50px; /* Set this to the height of the header */
+  bottom: 50px; /* Set this to the height of the footer */
+  left: 230px;
+  right: 0;
+  overflow: auto;
+  padding-left: 10%;
+  padding-right: 10%;
+}
 
-		main {
-			position: center;
-			top: 50px; /* Set this to the height of the header */
-			bottom: 50px; /* Set this to the height of the footer */
-			left: 230px; 
-			right: 0;
-			overflow: auto; 
-			padding-left: 10%;
-			padding-right: 10%;
-		}
+img.rounded-corners {
+  border-radius: 7px;
+}
 
-		img.rounded-corners {
-			border-radius: 7px;
-		}
+#header {
+  position: left;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 50px;
+  overflow: hidden; /* Disables scrollbars on the header frame. To enable scrollbars, change "hidden" to "scroll" */
+}
 
-		#header {
-			position: left;
-			top: 0;
-			left: 0;
-			width: 100%;
-			height: 50px; 
-			overflow: hidden; /* Disables scrollbars on the header frame. To enable scrollbars, change "hidden" to "scroll" */
-		}
+.header-logo {
+  vertical-align: top;
+  text-align: center;
+}
 
-		
-		.header-logo {
-			vertical-align: top;
-			text-align: center;
-		}
+#logo a {
+  color: #991b1b;
+  text-decoration: none;
+}
 
-		#logo a {
-			color: #991B1B;
-			text-decoration: none;
-		}
+#logo img {
+  float: center;
+  width: 6%;
+}
 
-		#logo img {
-			float: center;
-			width: 6%;
-		}
-		
-		#logo {
-			display: inline-block;
-			color: #991B1B;
-			text-decoration: none;
-			text-align: center;
-		}
-		
-		#center-header {
-			text-align: center;
-		}
+#logo {
+  display: inline-block;
+  color: #991b1b;
+  text-decoration: none;
+  text-align: center;
+}
 
-		#footer {
-			position: relative;
-			left: 0;
-			bottom: 0;
-			width: 100%;
-			height: 50px; 
-			overflow: hidden; /* Disables scrollbars on the footer frame. To enable scrollbars, change "hidden" to "scroll" */
-			background: #F3F4F6;
-		}
+#center-header {
+  text-align: center;
+}
 
-		#footer-logo {
-			float: left;
-			width: 17px;
-			margin-right: 10px;
-		}
+#footer {
+  position: relative;
+  left: 0;
+  bottom: 0;
+  width: 100%;
+  height: 50px;
+  overflow: hidden; /* Disables scrollbars on the footer frame. To enable scrollbars, change "hidden" to "scroll" */
+  background: #f3f4f6;
+}
 
-		#footer-title {
-			color:#991B1B;
-			font: italic;
-		}
+#footer-logo {
+  float: left;
+  width: 17px;
+  margin-right: 10px;
+}
 
-		#button {
-			background-color: #8d8d8d;
-			display: flex;
-			align-items: center;
-			justify-content: center;
-			margin: 0 auto;
-			height: 100vh;
-		}
-				
-		#social {
-			position: absolute; 
-			top: 50px; /* Set this to the height of the header */
-			bottom: 50px; /* Set this to the height of the footer */
-			left: 0; 
-			height: 70px;
-			width: 50px;
-			overflow: hidden; /* Scrollbars will appear on this frame only when there's enough content to require scrolling. To disable scrollbars, change to "hidden", or use "scroll" to enable permanent scrollbars */
-			background: white; 		
-		}
+#footer-title {
+  color: #991b1b;
+  font: italic;
+}
 
-		#social ul {
-			list-style-type: none;
-			margin: 0;
-			padding: 0;
-		}
+#button {
+  background-color: #8d8d8d;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin: 0 auto;
+  height: 100vh;
+}
 
-		#social ul a {
-			color: black;
-			text-decoration: none;
-		}
-		
-		#rights {
-			color: #555;
-		}
+#social {
+  position: absolute;
+  top: 50px; /* Set this to the height of the header */
+  bottom: 50px; /* Set this to the height of the footer */
+  left: 0;
+  height: 70px;
+  width: 50px;
+  overflow: hidden; /* Scrollbars will appear on this frame only when there's enough content to require scrolling. To disable scrollbars, change to "hidden", or use "scroll" to enable permanent scrollbars */
+  background: white;
+}
 
-		#menu{
-			float: left;
-			width: 80%;
-			height: 100%;
-			margin: none;
-		}
-			 
-		#menu ul{
-			text-align: left;
-			float: left;
-			margin: none;
-			background: white;
-			list-style-type: none;
-			margin: 0;
-			padding: 0;
-		}
-			 
-		#menu li{
-			display: inline-block;
-			padding: none;
-			margin: none;
-		}
-			 
-		#menu li a, #menu li span{
-			display: inline-block;
-			padding: 0 2px;
-			text-decoration: none;
-			font-weight: 300;
-			text-transform: none;
-			line-height: 60px;
-		}
-			 
-		#menu li a{
-			
-			color: rgb(0, 0, 0);
-		}
-			 
-		#menu li:hover a, #menu li span{
-			background: rgb(12, 1, 1);
-			color: rgb(255, 255, 255);
-			border-left: 1px solid #000000;
-			text-decoration: none;
-		}
-		
-		#contact {
-			position: absolute;
-			right: 0;
+#social ul {
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+}
 
-			top: 60px;
+#social ul a {
+  color: black;
+  text-decoration: none;
+}
 
-			line-height: 60px;
-			padding: 0;
-		}
+#rights {
+  color: #555;
+}
 
-		#contact a {
-			color: #991B1B;
-			text-decoration: none;
-		}
-		
-		#welcome img{
-			width: 20rem;
-			float: right;
-		}
+#menu {
+  float: left;
+  width: 80%;
+  height: 100%;
+  margin: none;
+}
 
-		#welcome p{
-			padding: 1rem 1rem 1rem 1rem;
-			font-size: 32px;
-			block-size: 13rem;
-		}
+#menu ul {
+  text-align: left;
+  float: left;
+  margin: none;
+  background: white;
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+}
 
-		/*IE6 fix*/
-		* html body{
-			padding: 50px 0 50px 230px; /* Set the first value to the height of the header, the third value to the height of the footer, and last value to the width of the nav */
-		}
-		
-		* html main{ 
-			height: 100%; 
-			width: 100%; 
-			padding-left: 50%;
-		}
+#menu li {
+  display: inline-block;
+  padding: none;
+  margin: none;
+}
+
+#menu li a,
+#menu li span {
+  display: inline-block;
+  padding: 0 2px;
+  text-decoration: none;
+  font-weight: 300;
+  text-transform: none;
+  line-height: 60px;
+}
+
+#menu li a {
+  color: rgb(0, 0, 0);
+}
+
+#menu li:hover a,
+#menu li span {
+  background: rgb(12, 1, 1);
+  color: rgb(255, 255, 255);
+  border-left: 1px solid #000000;
+  text-decoration: none;
+}
+
+#contact {
+  position: absolute;
+  right: 0;
+
+  top: 60px;
+
+  line-height: 60px;
+  padding: 0;
+}
+
+#contact a {
+  color: #991b1b;
+  text-decoration: none;
+}
+
+#welcome img {
+  width: 20rem;
+  float: right;
+}
+
+#welcome p {
+  padding: 1rem 1rem 1rem 1rem;
+  font-size: 32px;
+  block-size: 13rem;
+}
+
+/*IE6 fix*/
+* html body {
+  padding: 50px 0 50px 230px; /* Set the first value to the height of the header, the third value to the height of the footer, and last value to the width of the nav */
+}
+
+* html main {
+  height: 100%;
+  width: 100%;
+  padding-left: 50%;
+}
